--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,86 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     top: 0;
     width: auto;
 }
+
+.bm-burger-button {
+    position: fixed;
+    width: 48px;
+    height: 48px;
+    right: 36px;
+    top: 34px;
+    /*background-color: #cc5200;*/
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+    background: #373a47;
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+    background: #a90000;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+    height: 24px;
+    width: 24px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+    background: #bdc3c7;
+}
+
+/*
+Sidebar wrapper styles
+Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+*/
+.bm-menu-wrap {
+    position: fixed;
+    height: auto !important;
+    left: 75%;
+    top: 80px;
+    width: 100% !important;
+}
+
+/* General sidebar styles */
+.bm-menu {
+    background: #2A00A2;
+    /*width: calc(100vw - 20%);*/
+
+    font-size: 1.15em;
+}
+
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+    fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+    color: #b8b7ad;
+    padding: 30px 20px 48px 20px;
+}
+
+/* Individual item */
+.bm-item {
+    display: inline-block;
+    font-size: 12px;
+    padding: 0px 14px;
+    margin: 12px 0px;
+    text-transform: uppercase;
+    font-family: SansSerif;
+    font-weight: bold;
+    height: 28px;
+    line-height: 18px;
+    letter-spacing: 1.5px;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+    background: unset;
+}
+.control-dots{
+
+}
