--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .bm-burger-button {
-    position: fixed;
+    position: absolute;
     width: 48px;
     height: 48px;
     right: 36px;
@@ -63,9 +63,9 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .bm-menu-wrap {
     position: fixed;
     height: auto !important;
-    left: 75%;
+    left: 80%;
     top: 80px;
-    width: 100% !important;
+    /*width: 100% !important;*/
 }
 
 /* General sidebar styles */
